fix for scroll jumping when menu fixes to top
git-svn-id: http://svn.code.sf.net/p/conferenceplan/code/branches/planner-rc1@1239 1f962665-22ff-41fc-9765-37673d54b4f3

--- a/app/assets/stylesheets/grenadine/theme.css.scss
+++ b/app/assets/stylesheets/grenadine/theme.css.scss
@@ -61,6 +61,11 @@
   z-index:799;
   width:100%;
 }
+
+#user-menu {
+  height: 72px;
+}
+
 #grenadine-footer, #grenadine-footer a:link, #grenadine-footer a:visited {
   background-color: #32363e;
   /* height: 53px; */
